[gd_scene load_steps=2 format=3 uid="uid://dk046gnwuaxay"]

[ext_resource type="Script" path="res://lib/path_browser.gd" id="1_vwgt5"]

[node name="ResBrowser" type="Node2D"]
script = ExtResource("1_vwgt5")

[node name="Builder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 322.0
offset_bottom = 32.0

[node name="Path" type="TextEdit" parent="Builder"]
layout_mode = 2
offset_right = 344.0
offset_bottom = 40.0
placeholder_text = "Path"

[node name="Browse" type="Button" parent="Builder"]
layout_mode = 2
offset_left = 352.0
offset_right = 418.0
offset_bottom = 40.0
text = "Browse"

[node name="FileDialog" type="FileDialog" parent="Builder"]
title = "Open a File"
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tscn")

[node name="Tree" type="Tree" parent="Builder"]
layout_mode = 0
offset_top = 48.0
offset_right = 416.0
offset_bottom = 392.0

[connection signal="pressed" from="Builder/Browse" to="." method="_on_browse_pressed"]
[connection signal="file_selected" from="Builder/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="item_selected" from="Builder/Tree" to="." method="_on_tree_item_selected"]
